# data-engineer-portfolio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.learning/: async_snippets.py  decorators_and_enums.py  inspect.py
.learning/Asimov/: aula003-math_operations.py  aula004-practice.py  aula006-dicionarios.py
API-ETL/: dw_service.py
API-ETL/apache-beam/awesome_data_ingestion/: pyproject.toml  requirements.txt
API-ETL/apache-beam/awesome_data_ingestion/notebooks/: data_explorer.ipynb
API-ETL/apache-beam/awesome_data_ingestion/src/: ETLWithBeam.py  main.py
API-ETL/apache-beam/awesome_data_ingestion/src/etl/: extract.py  logs.py  transform.py
API-ETL/apache-beam/awesome_data_ingestion/src/etl/beam_config/: PipelineConfiguration.py
API-ETL/apache-beam/awesome_data_ingestion/tests/: test_extract.py  testes_etl.py
API-ETL/pandas/awesome_data_ingestion/: pyproject.toml
API-ETL/pandas/awesome_data_ingestion/src/: ELWithPandas.py
API-ETL/pandas/awesome_data_ingestion/tests/: test_extract.py  test_load.py
Challenger/: meli-chalenger.py
DashboardsWithPython/streamlit/: stream_lit_dashboards.py  stream_lit_dashboardsv2.py
DataAnalysisWithApacheSpark/: SparkInstance.py  docker-compose.yaml  main.py  temp.py
DataPipelineWithApacheBeam/: beam.py  pyproject.toml  requirements.txt
DockerContainers/airflow/: Dockerfile  (+2 more)
GoogleCloudBigQueryMetadataWithPython/: BigQueryInformation.py
HelloGo/: go.mod  go.sum  main  main.go
HexagonalArchExample/: main.py
my-first-frontend/: index.html  index.js  index.ts  package-lock.json  package.json
(+51 files in other folders)
