[tool.poetry]
name = "apache-beam-read-write-file"
version = "0.1.0"
description = "Project for read exist file and create new file"
authors = ["ivbarauna <ivanildo.jnr@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
apache-beam = "^2.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
