[tool.poetry]
name = "awesome-data-ingestion"
version = "0.1.0"
description = ""
authors = ["ivsouza <ivanildo.souza@mercadolivre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
